--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -8,9 +8,7 @@
     \usepackage{graphicx}   % Import pictures
     \usepackage{ragged2e}   % fullfill paragraphs
     \usepackage{multicol}
-    %\usepackage{lscape}
     \usepackage{xcolor}
-    %\usepackage{listings}
     \usepackage{courier}
     \usepackage{caption}
     
@@ -31,7 +29,7 @@
     \textsc{\large Faculty of Information Technology}\\[8cm]
     
     % Title - lines
-    { \huge \bfseries DHCP Starvation attack}\\[0.3cm]
+    { \huge \bfseries Monitoring and Generating Tools of Simple Distance-Vector Protocols}\\[0.3cm]
     { \Large \bfseries Project documentation}\\[0.5cm]
     { \bfseries Martin Benes}\\
     
