--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -1,4 +1,27 @@
 
+@techreport{RIPngStd,
+  type = {Standard},
+  key = {RFC2080},
+  month = Jan,
+  year = {1997},
+  title = {{RIPng for IPv6}},
+  authors = {Malkin & Minnear},
+  institution = {Internet Engineering Task Force},
+  url = {https://tools.ietf.org/html/rfc2080}
+}
+
+@misc{RIPguide,
+  author  = "Charles M. Kozierok",
+  title   = "TCP/IP Routing Information Protocol (RIP, RIP-2 and RIPng)",
+  year    = "2005",
+  urlseen = "28-09-18",
+  url     = "http://www.tcpipguide.com/"
+}
+
+
+
+
+
 @misc{DHCPwikipedia,
   title = {Dynamic Host Configuration Protocol - Wikipedia},
   howpublished = {\url{https://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol}},
